    + Relooking des erreurs pour les champs des formulaires
    + Choix du nombre de mois pour l'import des logs transposé dans l'onglet display-logs
    + Le choix min et max pour l'axe Y des puissances dans les logs se fait maintenant comme pour les autres axes directement dans l'onglet log
    + Ajout du parser php de wiki de Al
    + Prise en compte des sauts de ligne dans le calendar

-- Yann Genevois <yann.genevois@gmail.com> Sun Mar 24 12:28:40 CET 2013


Cultibox (1.1.10) precise; urgency=low
    + La valeur par défaut des programmes est mise à "Marche" => correction de bug
    + Formattage des fichiers calc_XX pour le calendrier, suppréssion d'une ligne entre le titre et la description
    + Ajout d'un résumé et de tooltips pour la partie cost
    + Réactivation de la régulation secondaire
    + Ajout d'un résumé des régulations dans les logs
    + Correction des titres des sections pour l'uniformité
    + Possibilité de choisir le capteur utilisé pour la régulation
    + Changement du type 'Inconnu' en type 'Autre'
    + Ajout de safari comme navigateur officiellement supporté
    + Installation d'un service de démarrage pour Mac Os X
    + Ajout d'une application mac pour lancer le soft cultibox
    + AJout des scripts load/backup pour Mac Os X
    + Correction des redirections vers le waiting pour le formatage de la carte SD
    + Renomage des scripts gérant les logs en display-logs pour être cohérent 
    + Correction d'un bug sur l'affichage du menu du display-logs qui devait être en blanc quand actif
    + Changement des couleurs du timepicker pour respecter la charte graphique
    + Ajout d'un onglet Help pour la future documentation
    + Nouvelle base joomla qui intègre la corection du menu display-logs + le menu help

-- Yann Genevois <yann.genevois@gmail.com> Sun Mar 17 18:08:59 CET 2013



Cultibox (1.1.9) precise; urgency=low
    + Lancement de l'interface à la fin de l'installation sous windows