@@ -908,7 +908,7 @@ $(function () {
 <tr>
     <td class="log-manage-marge"></td>
     <td class="log-manage-title"><?php echo __('MANAGE_RESET_TITLE'); ?><img src="main/libs/img/infos.png" alt="" class="info-bulle-css" title="<?php echo __('TOOLTIP_RESET_LOG'); ?>" /></td>
-    <td class="log-manage-field"><INPUT type="submit" id="reset_log" name="reset_log" value="<?php echo __('MANAGE_RESET'); ?>" onclick="return DeleteForm('<?php echo __('RESET_CONFIRM','javascript'); ?>')"></td>
+    <td class="log-manage-field"><INPUT type="submit" id="reset_log" name="reset_log" value="<?php echo __('MANAGE_RESET_LOG'); ?>" onclick="return DeleteForm('<?php echo __('RESET_CONFIRM','javascript'); ?>')"></td>
     <td></td>
 </tr>
 </table>
@@ -923,6 +923,31 @@ $(function () {
 <input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
 <?php } ?>
 </form>
+
+
+
+<form action="/cultibox/index.php/display-logs#anchor-manage" method="post" >
+<table class="table_width">
+<tr>
+    <td class="log-manage-marge"></td>
+    <td class="log-manage-title"><?php echo __('MANAGE_EXPORT_LOG_CSV'); ?><img src="main/libs/img/infos.png" alt="" class="info-bulle-css" title="<?php echo __('TOOLTIP_EXPORT_LOG_CSV'); ?>" /></td>
+    <td class="log-manage-field"><INPUT type="submit" id="export_log" name="export_log" value="<?php echo __('MANAGE_EXPORT_LOG_CSV_BUTTON'); ?>"></td>
+    <td></td>
+</tr>
+</table>
+<input type="hidden" name="quick_load" value="True">
+<input type="hidden" name="select_plug" value="<?php echo $select_plug; ?>">
+<input type="hidden" name="select_power" value="<?php echo $select_power; ?>">
+<input type="hidden" name="select_sensor" value="<?php echo $select_sensor; ?>">
+<?php if(strcmp("$type","month")==0) { ?>
+<input type="hidden" name="startmonth" value="<?php echo "$startmonth"; ?>">
+<input type="hidden" name="startyear" value="<?php echo "$startyear"; ?>" >
+<?php } else { ?>
+<input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
+<?php } ?>
+</form>
+
+
 
 
 <label id="anchor-manage"></label>
@@ -931,7 +956,7 @@ $(function () {
 <tr>
     <td class="log-manage-marge"></td>
     <td class="log-manage-title"><?php echo __('MANAGE_RESET_TITLE_POWER'); ?><img src="main/libs/img/infos.png" alt="" class="info-bulle-css" title="<?php echo __('TOOLTIP_RESET_LOG'); ?>" /></td>
-    <td class="log-manage-field"><input type="submit" id="reset_log_power" name="reset_log_power" value="<?php echo __('MANAGE_RESET'); ?>" onclick="return DeleteForm('<?php echo __('RESET_CONFIRM','javascript'); ?>')"></td>
+    <td class="log-manage-field"><input type="submit" id="reset_log_power" name="reset_log_power" value="<?php echo __('MANAGE_RESET_POWER'); ?>" onclick="return DeleteForm('<?php echo __('RESET_CONFIRM','javascript'); ?>')"></td>
     <td></td>
 </tr>
 </table>
@@ -946,6 +971,29 @@ $(function () {
 <input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
 <?php } ?>
 </form>
+
+
+<form action="/cultibox/index.php/display-logs#anchor-manage" method="post" >
+<table class="table_width">
+<tr>
+    <td class="log-manage-marge"></td>
+    <td class="log-manage-title"><?php echo __('MANAGE_EXPORT_POWER_CSV'); ?><img src="main/libs/img/infos.png" alt="" class="info-bulle-css" title="<?php echo __('TOOLTIP_EXPORT_POWER_CSV'); ?>" /></td>
+    <td class="log-manage-field"><INPUT type="submit" id="export_log_power" name="export_log_power" value="<?php echo __('MANAGE_EXPORT_POWER_CSV_BUTTON'); ?>"></td>
+    <td></td>
+</tr>
+</table>
+<input type="hidden" name="quick_load" value="True">
+<input type="hidden" name="select_plug" value="<?php echo $select_plug; ?>">
+<input type="hidden" name="select_power" value="<?php echo $select_power; ?>">
+<input type="hidden" name="select_sensor" value="<?php echo $select_sensor; ?>">
+<?php if(strcmp("$type","month")==0) { ?>
+<input type="hidden" name="startmonth" value="<?php echo "$startmonth"; ?>">
+<input type="hidden" name="startyear" value="<?php echo "$startyear"; ?>" >
+<?php } else { ?>
+<input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
+<?php } ?>
+</form>
+
 
 <br />
 <br />
